<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/nv_more"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_curr"
            android:backgroundTint="#05000000"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_dark"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/nav_dark"
                app:thumbIconSize="1dp"
                app:trackDecorationTint="@android:color/transparent" />

            <TextView
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/nav_share"
                app:drawableEndCompat="@drawable/ic_go"
                app:drawableStartCompat="@drawable/ic_share" />

            <TextView
                android:id="@+id/btn_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/nav_rate"
                app:drawableEndCompat="@drawable/ic_go"
                app:drawableStartCompat="@drawable/ic_rate" />

            <TextView
                android:id="@+id/btn_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/nav_apps"
                app:drawableEndCompat="@drawable/ic_go"
                app:drawableStartCompat="@drawable/ic_apps" />

            <TextView
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/nav_about"
                app:drawableEndCompat="@drawable/ic_go"
                app:drawableStartCompat="@drawable/ic_info" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>